# fastapi

./: docker-compose.yml  main.py  pyproject.toml
app/api/auth/: controllers.py
app/api/auth/authenticate/: generations.py  jwt_handler.py
app/api/auth/services/: login.py  register.py
app/api/sample/: controllers.py  models.py  services.py
app/api/user/: controllers.py  models.py
app/common/: authorization.py  decorators.py  dependencies.py
app/common/exceptions/: exception_handlers.py
app/common/response/: __init__.py
app/config/: application.py
app/config/connections/: database.py
app/config/loggings/: config.py
app/config/settings/: __init__.py  base.py  development.py  local.py  production.py
docker/: Dockerfile  nginx.conf
