[tool.poetry]
name = "fastapi-was"
version = "0.1.0"
description = ""
authors = ["miintto <miintto.log@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
PyJWT = "^2.4.0"
bcrypt = "^4.0.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
